# Learning-Test

SDL_test/: SDL_Note.docx
SDL_test/SDL_PRO/: SDL_pro.IAB  SDL_pro.IAD  SDL_pro.IMB  SDL_pro.IMD  SDL_pro.PO  SDL_pro.PR  SDL_pro.PRI  SDL_pro.PS  SDL_pro.SearchResults  SDL_pro.WK3
SDL_test/basic_training_2019_10_24/: CMakeLists.txt  sdl_test.cpp
SDL_test/basic_training_2019_10_25/: CMakeLists.txt
SDL_test/button_test/: 17_mouse_events.cpp
SDL_test/example/: 10_color_keying.cpp  11_clip_rendering_and_sprite_sheets.cpp  14_animated_sprites_and_vsync.cpp  17_mouse_events.cpp  22_timing.cpp  49_mutexes_and_conditions.cpp  CMakeLists.txt  sdl_test.cpp
SDL_test/loadledimage/: CMakeLists.txt  sdl_test.cpp
TrafficLight-20191011T014914Z-001/TrafficLight/: CMakeLists.txt  UML Statechart Diagram.xlsx  button.cpp  button.h  led.cpp  led.h  main.cpp  main.h  roadled.cpp  roadled.h  task.cpp  task.h  ~$UML Statechart Diagram.xlsx
TrafficLight-20191011T014914Z-001/tatemachine_pro/: statemachine.IAB  statemachine.IAD  statemachine.IMB  statemachine.IMD  statemachine.PFI  statemachine.PO  statemachine.PR  statemachine.PRI  statemachine.PS  statemachine.SearchResults  statemachine.WK3
c++_test/class/: class_note.txt
cmake project test/: CMakeCache.txt  CMakelists.txt  Makefile  cmake_install.cmake  cmake_user_manual.docx  test1.c
cmake project test/Hello/: CMakeLists.txt  Makefile  cmake_install.cmake  (+2 more)
minGW_gcc_test/: C++_helloworld.cpp  minGW_gcc_test.docx
python_test/: game_ver1.py
statemachine&gitbash_test/: CMakeCache.txt  CMakelists.txt  Makefile  UML.xlsx  cmake_install.cmake  gitbash_note.docx  main.c  main.h  start.bat  ~$tbash_note.docx
(+10 files in other folders)
